fixed text alignment issue on comparison card, organized css a little

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -7,23 +7,42 @@
 }
 
 .main-header {
+  align-items: flex-end;
   background-image: url('https://source.unsplash.com/user/tylerhevia/likes/1600x900');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
-  align-items: flex-end;
   height: 25vh;
 }
 
 .main-title {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 60px;
   background: none;
   color: white;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 60px;
+  margin: 10px;
   -webkit-text-stroke: 2px black;
   width: 95%;
+}
+
+.controls-container {
+  align-items: center;
+  background: #28292b;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 20px;
+  width: 100%;
+}
+
+.search-input {
+  border: 2px solid lightgrey;
+  font-size: 20px;
+  height: 35px;
   margin: 10px;
+  text-align: center;
+  width: 50%;
 }
 
 .district-repository-container {
@@ -31,25 +50,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-}
-
-.controls-container {
-  background: #28292b;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 20px;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-
-.search-input {
-  width: 50%;
-  height: 35px;
-  text-align: center;
-  font-size: 20px;
-  margin: 10px;
-  border: 2px solid lightgrey;
 }
 
 .district-container {
@@ -63,9 +63,9 @@
   background-image: url('https://www.pixelstalk.net/wp-content/uploads/wallpapers/Chalkboard-image.jpg');
   background-position: center;
   background-size: cover;
+  border: 15px solid #bf9d5c;
   display: flex;
   justify-content: center;
-  border: 15px solid #bf9d5c;
   margin-top: 10px;
   width: 85%;
 }
@@ -77,43 +77,42 @@
 .card {
   align-items: center;
   background: #28292b;
+  border: 5px solid #bf9d5c;
+  border-radius: 5px;
   display: flex;
   flex-direction: column;
+  font-size: 24px;
   justify-content: center;
   margin: 10px;
   opacity: .9;
   padding: 10px;
   width: 20%;
-  border: 5px solid #bf9d5c;
-  border-radius: 5px;
-  font-size: 24px;
 }
 
 .card ul {
-  width: 30%;
   background: none;
+  width: 30%;
 }
 
 .card li {
+  background: none;
   display: flex;
   justify-content: space-between;
-  background: none;
 }
 
 .card span {
-  display: flex;
-  width: 50px;
   background-color: inherit;
+  display: flex;
 }
 
 .compare-message {
+  background: none;
+  color: white;
+  font-size: 50px;
+  height: 100%;
+  margin: 0;
   text-align: center;
   width: 100%;
-  height: 100%;
-  background: none;
-  margin: 0;
-  font-size: 50px;
-  color: white;
 }
 
 .selected-district-card {
@@ -188,6 +187,8 @@
 
 .compare-data {
   color: #28292b;
+  text-align: center;
+  width: 50;
 }
 
 .card:hover {
